--- a/references.bib
+++ b/references.bib
@@ -1918,18 +1918,6 @@
 	url = {}
 }
 
-@article{Rohrer_et_al_2021,
-	author={Rohrer, J. and Schmukle, S. and McElreath, R.},
-	journal={PsyArXiv},
-	pages = {},
-	title={The Only Thing That Can Stop Bad Causal Inference Is Good Causal Inference},
-	volume = {},
-	number = {},
-	year={2021},
-	doi={10.31234/osf.io/mz5jx},
-	url = {}
-}
-
 @article{Gijsen_et_al_2021,
     author={Gijsen, M. and {van Daal}, T. and Lesterhuis, Marije and Gijbels, David and {De Maeyer}, Sven}, 
     title={The Complexity of Comparative Judgments in Assessing Argumentative Writing: An Eye Tracking Study},
@@ -3361,6 +3349,16 @@ responses?},
     url={https://arxiv.org/abs/2011.01808}, 
 }
 
+@misc{Schad_et_al_2020,
+      title={Toward a principled Bayesian workflow in cognitive science}, 
+      author={Daniel J. Schad and Michael Betancourt and Shravan Vasishth},
+      year={2020},
+      eprint={1904.12765},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME},
+      url={https://arxiv.org/abs/1904.12765}, 
+}
+
 @misc{McElreath_2021,
     author = {McElreath, R.},
     title = {Science Before Statistics: Causal Inference},
@@ -3431,7 +3429,7 @@ responses?},
     url = {https://mc-stan.org/loo/}
   }
 
-@misc{McElreath_2024,
+@misc{McElreath_2024a,
 	author = {McElreath, R.},
 	title = {Statistical Rethinking, 2024 course},
 	year = {2024},
@@ -3561,15 +3559,45 @@ responses?},
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@misc{Betancourt_2020,
+      title={Toward a principled Bayesian workflow}, 
+      author={Betancourt, M.},
+      year = {2020},
+      date = {2020-04-01},
+      langid = {en},
+      note = {last accessed in 10-08-2025},
+      url={https://betanalpha.github.io/assets/case_studies/principled_bayesian_workflow.html}, 
+}
+
+@online{McElreath_2024b,
+    author = {McElreath, R.},
+    title = {The Third Edition, the Dotted Half Note of Editions},
+    year = {2024},
+    date = {2024-01-02},
+    langid = {en},
+    note = {last accessed in 10-08-2025},
+    url = {https://elevanth.org/2024_01_02_third_edition.html}
+}
+
+
+@online{McElreath_2024c,
+    author = {McElreath, R.},
+    title = {Understanding Bayesian Statistics Without Frequentist Language},
+    year = {2024},
+    date = {2024-03-27},
+    langid = {en},
+    note = {last accessed in 10-08-2025},
+    url = {http://talmo.uk/2024/slides/mcelreath.pdf}
+}
+
+
 @online{Rivera_et_al_2025,
-    author = {Rivera, J.M. and {van Daal}, T. and {De Maeyer},
-    S. and Gillis, S},
+    author = {Rivera, J.M. and {van Daal}, T. and {De Maeyer}, S. and Gillis, S},
     title = {Let’s Talk about Thurstone \& {Co.:} An Information-Theoretical Model for Comparative Judgments, and Its Statistical Translation},
     year = {2025},
     date = {2025-08-13},
     langid = {en},
     note = {last accessed in 30-08-2025},
     url = {https://jriveraespejo.github.io/paper2_manuscript/}
-
 }
 
