--- a/presentation.qmd
+++ b/presentation.qmd
@@ -59,7 +59,9 @@ title-slide-attributes:
 
 ## 1. Introduction {style="font-size:80%;"}
 
-The Bradley-Terry-Luce (BTL) model [@Bradley_et_al_1952; @Luce_1959] offers a **simple method** for measuring traits and conducting statistical inference from comparative judgment (CJ) data [@Andrich_1978; @Pollitt_2012b]. [Its simplicity stems from two features:]{.fragment}
+The Bradley-Terry-Luce (BTL) model [@Bradley_et_al_1952; @Luce_1959] offers a **simple method** for measuring traits and conducting statistical inference from comparative judgment (CJ) data [@Andrich_1978; @Pollitt_2012b]. 
+
+[Its simplicity stems from two features:]{.fragment}
 
 ::: incremental 
 ::: {style="font-size:80%;"}
@@ -85,9 +87,9 @@ However, recent studies question:
 
 To address these concerns, Rivera et al. [@Rivera_et_al_2025] proposed *The Information-Theoretical model for CJ*. 
 
-[The approach extends the general form of Thurstone's law of comparative judgment [@Thurstone_1927a; @Thurstone_1927b], combining Thurstone's core theoretical principles with key CJ assessment design features.]{.fragment style="font-size:80%;"}
+[1. The approach extends the general form of Thurstone's law of comparative judgment [@Thurstone_1927a; @Thurstone_1927b], combining Thurstone's core theoretical principles with key CJ assessment design features.]{.fragment style="font-size:80%;"}
 
-[This integration enables the development of models tailored to the assumed data-generating process of the CJ system under study, thus:]{.fragment style="font-size:80%;"}
+[2. This integration enables the development of models tailored to the assumed data-generating process of the CJ system under study, thus:]{.fragment style="font-size:80%;"}
 
 ::: incremental 
 ::: {style="font-size:80%;"}
@@ -133,13 +135,13 @@ Once a *sufficiently trustworthy model* is found in goal 1,
 CJ data can be analyzed under two analytical approaches:
 
 ::: incremental 
-1. **The classical BTL analysis** [@Pollitt_2012a; @Pollitt_2012b]
+1. **The classical BTL analysis** [@Pollitt_2012a; @Pollitt_2012b],
     
-    It applies several sequential methods to estimate (generate) the traits and conduct inferences,
+    which applies several sequential methods to estimate (generate) the traits and conduct inferences,
 
-2. **The Information-Theoretical model for CJ** [@Rivera_et_al_2025]
+2. **The Information-Theoretical model for CJ** [@Rivera_et_al_2025],
 
-    It applies one systematic, integrated approach for the same two purposes.
+    which applies one systematic, integrated approach for the same two purposes.
 :::
 
 <!-- ######################################### -->
@@ -148,7 +150,7 @@ CJ data can be analyzed under two analytical approaches:
 
 ## 3.1 The classical BTL analysis {style="font-size:80%;"}
 
-This Approach applies several sequential methods, each with different purposes [@Pollitt_2012a; @Pollitt_2012b; @Jones_et_al_2019; @Boonen_et_al_2020; @Chambers_et_al_2022; @Bouwer_et_al_2023]:
+This approach applies several sequential methods, each with different purposes [@Pollitt_2012a; @Pollitt_2012b; @Jones_et_al_2019; @Boonen_et_al_2020; @Chambers_et_al_2022; @Bouwer_et_al_2023]:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
@@ -344,7 +346,7 @@ $$
 
 ## 4. Methods {#sec-methods style="font-size:80%;"}
 
-To meet the tutorial and model validation goals, this study follows the workflow below [@Depaoli_et_al_2017; @Neal_2020; @Gelman_et_al_2020; @Schad_et_al_2020; @Betancourt_2020; @McElreath_2024b; @McElreath_2024c]:
+To meet the tutorial and model validation goals, this study follows the Bayesian (research) workflow [@Depaoli_et_al_2017; @Neal_2020; @Gelman_et_al_2020; @Schad_et_al_2020; @Betancourt_2020; @McElreath_2024b; @McElreath_2024c]:
 
 ::: {#fig-workflow}
 ![](/images/workflow.png){width=100%}
@@ -356,31 +358,23 @@ Bayesian (research) workflow.
 
 ## 4. Methods {style="font-size:80%;"}
 
-Specifically, it will follow these steps:
+Specifically, the study follows these steps (overarching goals in parenthesis):
 
 ::: incremental 
 ::: {style="font-size:75%;"}
-1. **Theory** 
+1. **Theory $\rightarrow$ Estimand(s) $\rightarrow$ Design** (*Tutorial and Model validation*)
 
-    Specify the assumptions of interest based on relevant literature;
+    Considering three steps: (1) define the CJ structure and explicitly state its assumptions from relevant literature, (2) specify the estimand(s) of interest and provide formal definitions for each target parameter, and (3) simulate a synthetic conceptual population that reflects the defined structure and assumptions;
 
-2. **Estimand** 
-
-    Define the estimands of interest;
-
-3. **Theory $\rightarrow$ Design** 
-
-    Simulate a *synthetic conceptual population* grounded in the CJ structure and assumptions of interest;
-
-4. **Design $\rightarrow$ Sample** 
+2. **Design $\rightarrow$ Sample** (*Tutorial and Model validation*)
     
     Generate _**two** synthetic samples and comparison datasets_ from the conceptual population in step $3$;
 
-5. **{Theory, Design, Estimand} $\rightarrow$ Estimator** 
+3. **{Theory, Design, Estimand(s)} $\rightarrow$ Estimator** (*Tutorial and Model validation*)
 
     Specify models for analyzing the _**first** synthetic comparison dataset_ using both the classical BTL analysis and the Information-Theoretical model for CJ;
     
-6. **Estimator $\rightarrow$ Prior predictive** 
+4. **Estimator $\rightarrow$ Prior predictive** (*Tutorial*)
 
     Perform prior predictive checks;
 :::
@@ -392,23 +386,23 @@ Specifically, it will follow these steps:
 
 ::: incremental 
 ::: {style="font-size:75%;"}
-7. **{Estimator, Sample} $\rightarrow$ Estimates** 
+5. **{Estimator, Sample} $\rightarrow$ Estimate(s)** (*Tutorial and Model validation*)
 
     Apply both the classical BTL model and the Information-Theoretical model for CJ to the _**first** synthetic comparison dataset_;
 
-8. **Estimates $\rightarrow$ {Diagnostic, Post predictive}** 
+6. **Estimate(s) $\rightarrow$ {Diagnostic, Post predictive}** (*Tutorial*)
 
-    Assess the quality of the models and estimates in terms of convergence, parameter recovery, in-sample fit, out-of-sample fit, and in-sample predictive accuracy;
+    Assess the quality of the models and estimate(s) in terms of convergence, parameter recovery, in-sample fit, out-of-sample fit, and in-sample predictive accuracy;
     
-9. **{Diagnostic, Post predictive} $\rightarrow$ Estimator** 
+7. **{Diagnostic, Post predictive} $\rightarrow$ Estimator** (*Tutorial*)
 
     Incrementally refine the model specified in step 5, repeating steps 5–9 until a *sufficiently trustworthy model* is obtained according to the criteria outlined in step 8;
 
-10. **Estimates $\rightarrow$ Effects $\leftarrow$ Estimand**
+8. **Estimator $\rightarrow$ Estimate(s) $\rightarrow$ Effects $\leftarrow$ Estimand(s)** (*Model validation*)
 
-    Generate the *estimates* of interest for CJ the _**first** synthetic comparison dataset_ using both the classical BTL analysis and the Information-Theoretical model, and interpret the results;
+    Generate the *estimate(s)* of interest for CJ the _**first** synthetic comparison dataset_ using both the classical BTL analysis and the Information-Theoretical model, and interpret the results;
     
-11. **Estimates $\rightarrow$ Predictions $\leftarrow$ Estimand**
+9. **Estimator $\rightarrow$ Estimate(s) $\rightarrow$ Predictions $\leftarrow$ Estimand(s)** (*Model validation*)
 
     Generate predictions for the _**second** synthetic comparison dataset_ using both the classical BTL analysis and the Information-Theoretical model for CJ, and compare their out-of-sample predictive accuracy.
 :::
@@ -419,7 +413,7 @@ Specifically, it will follow these steps:
 
 ---
 
-## 4.1 From Theory to Design {style="font-size:80%;"}
+## 4.1 From Theory to Design: Step 1 {style="font-size:80%;"}
 
 The conceptual population simulation is based on the analysis of Boonen et al. [@Boonen_et_al_2020], due to the data characteristics and study findings. 
 
@@ -456,82 +450,145 @@ Regarding the study results:
 
 ---
 
-## 4.1 From Theory to Design {style="font-size:80%;"}
+## 4.1 From Theory to Design: Step 1 {style="font-size:80%;"}
 
-Thus, the assumed data-generating process for the conceptual population is the following:
+Thus, the assumed data-generating process for the conceptual population is:
 
 ::: {.fragment}
 
-::: {#fig-sim layout-ncol=2}
+::: {#fig-cj17 layout-ncol=2}
+
+![](/images/CJ_population_DAG.png){width=100%}
+
+$$
+\begin{aligned}
+  O_{R} & := f_{O}(D_{R}, S, C) \\
+  D_{R} & := f_{D}(T_{IA}, B_{JK}) \\
+  T_{IA} & := f_{T}(T_{I}, e_{IA}) \\
+  T_{I} & := f_{T}(X_{I}, e_{I}) \\
+  B_{JK} & := f_{B}(B_{J}) \\
+  B_{J} & := f_{B}(Z_{J}, e_{J}) \\ \\
+  e_{I} & \dsep \{ e_{J}, e_{IA} \} \\
+  e_{J} & \dsep \{ e_{IA} \}
+\end{aligned}
+$$
+
+CJ data-generating process for the conceptual population. *Left panel* shows the DAG. *Right panel * depicts the associated SCM.
+:::
+
+:::
+
+
+---
+
+## 4.1 From Theory to Design: Step 1 {style="font-size:80%;"}
+
+Leading to the statistical data-generating process:
+
+::: {.fragment}
+
+::: {#fig-cj18 layout-ncol=3}
+
+$$
+\begin{aligned}
+  O_{R} & := f_{O}(D_{R}, S, C) \\
+  D_{R} & := f_{D}(T_{IA}, B_{JK}) \\
+  T_{IA} & := f_{T}(T_{I}, e_{IA}) \\
+  T_{I} & := f_{T}(X_{I}, e_{I}) \\
+  B_{JK} & := f_{B}(B_{J}) \\
+  B_{J} & := f_{B}(Z_{J}, e_{J}) \\ \\
+  e_{I} & \dsep \{ e_{J}, e_{IA} \} \\
+  e_{J} & \dsep \{ e_{IA} \}
+\end{aligned}
+$$
+
+$$
+\begin{aligned}
+  & P( O_{R} \mid D_{R}, S, C ) \\
+  & P( D_{R} \mid T_{IA}, B_{JK} ) \\
+  & P( T_{IA} \mid T_{I}, e_{IA} ) \\
+  & P( T_{I} \mid X_{I}, e_{I} ) \\
+  & P( B_{JK} \mid B_{J} ) \\
+  & P( B_{J} \mid Z_{J}, e_{J} ) \\ \\
+  & P( e_{I} ) P( e_{IA} ) P( e_{J} )
+\end{aligned}
+$$
 
 $$
 \begin{aligned}
   O_{R} & \overset{iid}{\sim} \text{Bernoulli} \left[ \text{inv_logit}( D_{R} ) \right] \\
   D_{R} & = \left( T_{IA}[i,a] - T_{IA}[h,b] \right) + B_{JK}[j,k] \\
-  T_{IA} & = T_{I} + \beta_{XA} X_{IA} + e_{IA} \\
+  T_{IA} & = T_{I} + e_{IA} \\
   T_{I} & = \beta_{XI} X_{I} + e_{I} \\
-  B_{JK} & = B_{J} + \beta_{ZK} Z_{JK} + e_{JK} \\
+  B_{JK} & = B_{J} \\
   B_{J} & = \beta_{ZJ} Z_{J} + e_{J} \\ \\
   \boldsymbol{e} & \sim \text{Multi-Normal}( \boldsymbol{\mu}, \boldsymbol{\Sigma} )
   \\
-  \boldsymbol{\Sigma} &= \boldsymbol{V} \boldsymbol{Q} \boldsymbol{V} \\ \\
+  \boldsymbol{\Sigma} &= \boldsymbol{V} \boldsymbol{Q} \boldsymbol{V}
 \end{aligned}
+$$
+
+Data-generating process for simulated CJ data, SCM, probabilistic and statistical model
+:::
+
+:::
+
+::: {.fragment}
+::: {#fig-cj19 layout-ncol=2}
+
+$$
+\begin{split}
+X_{I} &= \{ X_{Ic}, X_{Id}[g=1], X_{Id}[g=2], X_{Id}[g=3] \} \\
+\beta_{XI} & = \{ \beta_{XIc}, \beta_{XId[g=1]}, \beta_{XId[g=2]}, \beta_{XId[g=3]} \} = \{ 0.1, 1, 0, -1\} \\
+Z_{J} &= \{ Z_{Jd}[g=1], Z_{Jd}[g=2], Z_{Jd}[g=3] \} \\
+\beta_{ZJ} &= \{ \beta_{ZJd[g=1]}, \beta_{ZJd[g=2]}, \beta_{ZJd[g=3]} \} = \{ 0, 0, 0\}
+\end{split}
 $$
 
 $$
 \begin{split}
-  \text{with} & \; \text{general parameters:} \\
-  & \beta_{XA} = 0 \\
-  & XI = \{ XIc, XI[g=1], XI[g=2], XI[g=3] \} \\
-  & \beta_{XI} = \{ \beta_{XIc}, \beta_{XI[g=1]}, \beta_{XI[g=2]}, \beta_{XI[g=3]} \} = \{ 0.1, 1, 0, -1\} \\
-  & \beta_{ZK} = 0 \\
-  & ZJ = \{ ZJ[g=1], ZJ[g=2], ZJ[g=3] \} \\
-  & \beta_{ZJ} = \{ \beta_{ZJ[g=1]}, \beta_{ZJ[g=2]}, \beta_{ZJ[g=3]} \} = \{ 0, 0, 0\} \\ \\
-  \text{with} & \; \text{error parameters:}\\
-  & \boldsymbol{\mu} = [0, 0, 0, 0]^{T}; \quad \boldsymbol{Q} = \begin{bmatrix}
-    1 & 0 & 0 & 0 \\
-    0 & 1 & 0 & 0 \\
-    0 & 0 & 1 & 0 \\
-    0 & 0 & 0 & 1 
-  \end{bmatrix} ;
-  \boldsymbol{V} = \begin{bmatrix}
-    s_{XI} & 0 & 0 & 0 \\
-    0 & p_{IA} & 0 & 0 \\
-    0 & 0 & s_{ZJ} & 0 \\
-    0 & 0 & 0 & p_{JK} 
-  \end{bmatrix} \\ 
-  \text{and} & \\
-  & s_{XI[g]} = \{ s_{XI[g=1]}, s_{XI[g=2]}, s_{XI[g=3]} \} = \{ 1.5, 0.75, 0.75\} \\
-  & s_{ZJ} = \{ s_{ZJ[g=1]}, s_{ZJ[g=2]}, s_{ZJ[g=3]} \} = \{ 0.5, 1, 1.5\} \\
-  & p_{IA} = 0.2; \quad p_{JK} = 0
+s_{XI[g]} &= \{ s_{XId[g=1]}, s_{XId[g=2]}, s_{XId[g=3]} \} = \{ 1.5, 0.75, 0.75\} \\
+s_{ZJ} &= \{ s_{ZJd[g=1]}, s_{ZJd[g=2]}, s_{ZJd[g=3]} \} = \{ 0.5, 1, 1.5\} \\
+p_{IA} &= 0.2 \\
+\boldsymbol{\mu} &= [0, 0, 0]^{T}; \quad 
+\boldsymbol{Q} = \begin{bmatrix}
+    1 & 0 & 0 \\
+    0 & 1 & 0 \\
+    0 & 0 & 1
+\end{bmatrix} ;
+\boldsymbol{V} = \begin{bmatrix}
+    s_{XI} & 0 & 0 \\
+    0 & p_{IA} & 0 \\
+    0 & 0 & s_{ZJ} 
+\end{bmatrix}
 \end{split}
 $$
 
-Data-generating process for simulated CJ data, generative statistical model and parameter assumptions
+Data-generating assumptions
 :::
 
 :::
+
 
 ---
 
-## 4.1 From Theory to Design {style="font-size:80%;"}
+## 4.1 From Theory to Design: Step 1 {style="font-size:80%;"}
 
 In layman terms:
 
 ::: incremental 
-::: {style="font-size:68%;"}
-- No difference between stimuli characteristics $(\beta_{XA})$,
-- Individual characteristics $(XI)$ consider one continuous variable and three groups,
-- There is a "small" but increasing effect from the continuous variable $(\beta_{XIc})$ [@Cohen_1988; @Sawilowsky_2009]
-- There are "very large" differences in the (latent) mean of the individual' groups $(\beta_{XI[g=1]}, \beta_{XI[g=2]}, \beta_{XI[g=3]})$ [@Cohen_1988; @Sawilowsky_2009],
-- No difference between judgment characteristics $(\beta_{ZK})$, because judges only make one comparison,
-- Judges characteristics $(ZJ)$ consider three groups,
-- There are judges biases, but no differences between the mean bias of the judges' groups $(\beta_{ZJ[g=1]}, \beta_{ZJ[g=2]}, \beta_{ZJ[g=3]})$,
+::: {style="font-size:60%;"}
+- No stimuli characteristics $(X_{IA})$,
+- Individual characteristics $(X_{I})$ considers one continuous variable $(X_{Ic})$ and a categorical variable with three levels $(X_{Id})$ corresponding to the individual' groups,
+- There is a "small" [@Cohen_1988; @Sawilowsky_2009] but increasing effect from the continuous variable $(\beta_{XIc})$ on the (latent) traits of individuals, 
+- There are "very large" [@Cohen_1988; @Sawilowsky_2009] differences in the (latent) mean of individual' groups $(\beta_{XId[g=1]} > \beta_{XId[g=2]} > \beta_{XId[g=3]})$,
+- Judges make only one comparison; therefore, there are no judgment-level characteristics $(Z_{JK})$, no judgement-level effects $(\beta_{ZJK})$, and no residual judgment variability $(p_{JK})$.
+- Judges characteristics $(Z_{J})$ consider a categorical variable with three levels corresponding to the judges' groups,
+- Judges exhibit individual biases, but there are no differences in the mean bias across judge groups $(\beta_{ZJd[g=1]}=\beta_{ZJd[g=2]}=\beta_{ZJd[g=3]}=0)$,
 - Errors (residuals) are centered around zero with zero correlation among them $(\boldsymbol{\mu}, \boldsymbol{Q})$,
-- Individual's residual variability is different for different individual's groups, but they fulfill: $\sum_{g=1}^{3} s_{XI[g]}/3 = 1$,
-- Judges (bias) residual variability is different for different judges' groups, but they fulfill: $\sum_{g=1}^{3} s_{ZJ[g]}/3 = 1$,
+- Individual's residual variability is different for different individual's groups ($s_{XId[g=1]} > s_{XId[g=2]} = s_{XId[g=3]}$, with $\sum_{g=1}^{3} s_{XId[g]}/3 = 1$),
+- Judges (bias) residual variability is different for different judges' groups ($s_{ZJd[g=1]} < s_{ZJd[g=2]} < s_{ZJD[g=3]}$, with $\sum_{g=1}^{3} s_{ZJ[g]}/3 = 1$),
 - Stimuli remaining variability is less than individual variability $(p_{IA})$,
-- There is no judgment remaining variability $(p_{JK})$, because the judges only make one comparison.
 :::
 :::
 
@@ -539,41 +596,41 @@ In layman terms:
 
 ---
 
-## 4.2 From Design to Sample {style="font-size:80%;"}
+## 4.2 From Design to Sample: Step 2 {style="font-size:80%;"}
 
 Differing only by replication seed, the study generates _**two** synthetic samples and comparison datasets_ from the conceptual population. 
 
 ::: {.fragment style="font-size:80%;"}
-For the sampling and comparison mechanisms illustrated in @fig-cj15 ($S$ and $C$, respectively) the study conducts sample size calculations (see next slides) and adopts the following design:
+More specifically, for the sampling and comparison mechanisms illustrated in @fig-cj17 ($S$ and $C$, respectively) the study conducts sample size calculations (see next slides) and adopts the following design:
 
 ::: incremental 
-- A sample of $59$ individuals, divided into three groups: $45$ normal-hearing (NH), $7$ hearing-impaired with hearing aids (HI-HA), and $7$ hearing-impaired with cochlear implants (HI-CI);
+- A sample of $54$ individuals, divided into three groups: $40$ normal-hearing (NH, $g=1$), $7$ hearing-impaired with hearing aids (HI-HA, $g=2$), and $7$ hearing-impaired with cochlear implants (HI-CI, $g=3$);
 - A sample of $10$ stimuli per individual;
-- A sample of $90$ judges, divided into three groups: $10$ audiologist (AU), $10$ primary teachers (PT), and $25$ inexperienced listeners (IL);
-- Judges conduct only one-comparison of the same stimulus pair (i.e., not repeated measures design [@Lawson_2015])
-- Stimuli is compared a total of $20$ times across all judges.
+- A sample of $60$ judges, divided into three groups: $10$ audiologist (AU, $g=1$), $10$ primary teachers (PT, $g=2$), and $40$ inexperienced listeners (IL, $g=3$);
+- Judges conduct only one-comparison of the same stimulus pair (i.e., NOT repeated measures design [@Lawson_2015, chap. 9.5])
+- Each stimulus is compared a total of $20$ times again another stimulus, across all judges.
 :::
 
 :::
 
 ---
 
-## 4.2 From Design to Sample {style="font-size:80%;"}
+## 4.2 From Design to Sample: Step 2 {style="font-size:80%;"}
 
 ::: {#fig-individual_ss}
 ![](/images/sim_individual_sample_size.png){width=100%}
 
-Individual's sample size calculation.
+Individual's sample size calculation, considering requirements for Power, Efficiency and Cost.
 :::
 
 ---
 
-## 4.2 From Design to Sample {style="font-size:80%;"}
+## 4.2 From Design to Sample: Step 2 {style="font-size:80%;"}
 
 ::: {#fig-judges_ss}
 ![](/images/sim_judges_sample_size.png){width=100%}
 
-Judges's sample size calculation.
+Judges's sample size calculation, considering requirements for Confidence, Efficiency and Cost.
 :::
 
 <!-- ######################################### -->
@@ -582,22 +639,145 @@ Judges's sample size calculation.
 
 ---
 
-## 5.1 From Theory to Estimator {style="font-size:80%;"}
+## 5.1 From Theory to Estimator: Steps 3-7 {style="font-size:80%;"}
+
+In this section the study will:
+
+::: incremental 
+1. Describe the _**first** synthetic comparison dataset_;
+2. Progress through the steps 3-7 of the workflow, described in @sec-methods.
+:::
 
 ---
 
-## 5.1.1 The classical BTL analysis {style="font-size:80%;"}
+## 5.1.1 The first synthetic comparison dataset {style="font-size:80%;"}
+
+In terms of design, the data reveals:
+
+::: incremental 
+::: {style="font-size:80%;"}
+- Most stimuli were compared $20$ times, the design is *balanced* for stimuli [@Lawson_2015, chap. 7.4];
+- Two stimuli (IDs $2$ and $3$) from individual $58$ were compared fewer times due to random design variation; 
+:::
+:::
+
+::: {.fragment}
+::: {#fig-stimuli_comparisons layout-ncol=2}
+![](/images/stimuli_comparisons_top.png){width=60%}
+
+![](/images/stimuli_comparisons_bottom.png){width=60%}
+
+Comparison design, left and right panels shows the pairs individuals $(Is)$ and stimuli $(As)$
+:::
+:::
+
+---
+
+## 5.1.1 The first synthetic comparison dataset {style="font-size:80%;"}
+
+In a similar manner, the data indicates:
+
+::: incremental 
+::: {style="font-size:80%;"}
+- Most individuals were compared $200$ times ($20$ comparisons × $10$ stimuli each);
+- One individual (ID $58$) was compared slightly fewer times due to random design variation;
+- The resulting fully connected undirected graph indicates a *balanced design* for individuals [@Lawson_2015, chap. 7.4].
+:::
+:::
+
+::: {.fragment}
+::: {#fig-individual_comparisons layout-ncol=2}
+![](/images/individual_network.png){width=60%}
+
+![](/images/individuals_comparisons.png){width=60%}
+
+Comparison design, left panel shows the network of connected individuals and right panel the number of comparisons per individual.
+:::
+:::
+
+---
+
+## 5.1.1 The first synthetic comparison dataset {style="font-size:80%;"}
+
+On the other hand, the data shows:
+
+::: incremental 
+::: {style="font-size:80%;"}
+- Judges compare individuals with varying frequency, ranging from $0$ to $13$ comparisons per individual;
+:::
+:::
+
+::: {.fragment}
+::: {#fig-judges_individuals_comparisons}
+![](/images/judges_individuals_network.png){width=100%}
+
+Bipartite graph of comparison design for judges and individuals.
+:::
+:::
 
 
 ---
 
-## 5.1.2 The Information-Theoretical model for CJ {style="font-size:80%;"}
+## 5.1.1 The first synthetic comparison dataset {style="font-size:80%;"}
 
+On the other hand, the data shows:
+
+::: {style="font-size:80%;"}
+- Judges compare individuals with varying frequency, ranging from $0$ to $13$ comparisons per individual;
+:::
+
+::: {.fragment style="font-size:80%;"}
+- Most judges complete $262$ comparisons (some $264$), yielding an overall *balanced design* [@Lawson_2015, chap. 7.4].
+:::
+
+::: {.fragment}
+::: {#fig-judges_comparisons layout-ncol=2}
+![](/images/judges2individuals_comparisons.png){width=60%}
+
+![](/images/judges_comparisons.png){width=90%}
+
+Comparison design, left panel shows the judges $(Js)$ vs the first $10$ individuals, and right panel show the total number of judges' comparisons.
+:::
+:::
 
 <!-- ######################################### -->
 
+---
+
+## 5.1.2 The classical BTL analysis {style="font-size:80%;"}
+
+This approach applies several sequential methods, each with different purposes [@Pollitt_2012a; @Pollitt_2012b; @Jones_et_al_2019; @Boonen_et_al_2020; @Chambers_et_al_2022; @Bouwer_et_al_2023]:
 
 <!-- ######################################### -->
+
+---
+
+## 5.1.3 The Information-Theoretical model for CJ {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+---
+
+## 5.2 From Estimands and Estimator to Effects and Predictions: Steps 8 and 9 {style="font-size:80%;"}
+
+---
+
+## 5.2.1 The second synthetic comparison dataset {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+---
+
+## 5.2.2 The classical BTL analysis {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+---
+
+## 5.2.3 The Information-Theoretical model for CJ {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
 
 # 6. Discussion
 
@@ -626,6 +806,14 @@ Judges's sample size calculation.
 ---
 
 ## 7. Conclusion {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+---
+
+## Licence
+
+All the code that is original to this study and not attributed to any other authors is copyrighted by Jose Manuel Rivera Espejo and released under the New BSD (3-Clause) License: [https://opensource.org/license/BSD-3-Clause][https://opensource.org/license/BSD-3-Clause]
 
 <!-- ######################################### -->
 
